--- a/Formação HTML e CSS/HTML5 e CSS3/Pages/Contato/contato.css
+++ b/Formação HTML e CSS/HTML5 e CSS3/Pages/Contato/contato.css
@@ -47,13 +47,7 @@ form label{
 	margin:  0 0 10px;
 }
 
-form label {
-    display:block;
-    font-size: 20px;
-    margin: 0 0 10px;
-}
-
-form label, form p {
+form label, form legend {
     display:block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -69,6 +63,23 @@ form label, form p {
     padding: 10px 25px;
     width: 50%;
 }
+.enviar {
+    width:40%;
+    padding: 15px 0;
+    background: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: darkorange;
+    transform: scale(1.2);
+}
 
 form input {
     display: block;
@@ -76,7 +87,20 @@ form input {
     padding: 10px 25px;
     width: 50%;
 }
+table {
+    margin: 20px 0 40px;
+}
 
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
+}
 footer {
 	text-align: center;
 	background: url("../../img/bg.jpg");
