--- a/Formação HTML e CSS/HTML5 e CSS3/style.css
+++ b/Formação HTML e CSS/HTML5 e CSS3/style.css
@@ -1,48 +1,88 @@
-#banner {
-	width:100%;
+
+header {
+	background: #BBBBBB;
+	padding: 20px 0;
 }
 
+.caixa {
+	position: relative;
+	width: 940px;
+	margin: 0 auto;
+}
+
+nav {
+	position: absolute;
+	top: 110px;
+	right: 0;
+}
+
+nav li {
+	display: inline;
+	margin: 0 0 0 15px;
+}
+
+nav a {
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: bold;
+	font-size: 22px;
+	text-decoration: none;
+}
+
+nav a:hover {
+	color: #C78C19;
+	text-decoration: underline;
+}
+
+/*Corpo*/
+
+.banner {
+    width:100%;
+}
 .principal{
-	background: #CCCCCC;
-	padding: 30px;
+	margin-left: 0.6em;
 }
-
 .titulo-principal {
-	padding-left: 20px;
+    text-align: center;
+    font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;
 }
 
-.titulo-centralizado {
-	text-align: center
+.principal p {
+	margin: 0 0 1em;
+	
 }
 
-p {
-	text-align: center;
+.principal strong {
+    font-weight: bold;
 }
 
-#missao {
-	font-size: 20px
-}
-
-em strong {
-	color: #FF0000;
-}
-
-.itens {
-	font-style: italic
-}
-
-.beneficios {
-	background: #FFFFFF;
-	padding: 20px;
-}
-
-ul {
-	display: inline-block;
-	vertical-align: top;
-	width: 20%;
-	margin-right: 15%;
+.principal em {
+	font-style: italic;
+	
 }
 
 .imagembeneficios {
-	width: 50%;
+    width: 60%
+}
+
+.utensilios {
+	
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0;
+}
+
+/*Rodape*/
+footer {
+	text-align: center;
+	background: url("/img/bg.jpg");
+	padding: 40px 0;
+}
+
+.copyright {
+	color: #FFFFFF;
+	font-size: 13px;
+	margin: 20px 0 0;
 }
