--- a/Formação HTML e CSS/HTML5 e CSS3/style.css
+++ b/Formação HTML e CSS/HTML5 e CSS3/style.css
@@ -35,18 +35,42 @@ nav a:hover {
 }
 
 /*Corpo*/
+body {
+    font-family: 'Montserrat', sans-serif;
+}
 
 .banner {
     width:100%;
 }
+
 .principal{
-	margin-left: 0.6em;
+	padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+
 }
+
 .titulo-principal {
     text-align: center;
-    font-size: 2em;
-	margin: 0 0 1em;
+    font-size: em;
+    margin: 0 0 1em;
 	clear: left;
+}
+.titulo-principal:before {
+    content: "[";
+}
+
+.titulo-principal:after {
+    content:"]"
+}
+
+.titulo-principal:first-letter {
+    font-weight: bold;
+}
+
+p:first-line {
+    font-style: italic;
 }
 
 .principal p {
@@ -63,17 +87,64 @@ nav a:hover {
 	
 }
 
+.beneficios {
+	padding: 3em 0;
+	background: #888888;
+}
+
+.itens {
+    line-height: 1.5;
+}
+itens:before {
+    content: "★"
+}
+.itens:first-child {
+    font-weight: bold;
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+	display: inline-block;
+	vertical-align: top;
+
+}
+
 .imagembeneficios {
-    width: 60%
+	width: 60%;
+	opacity: 0.3;
+	transition: 400ms;
+	box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagembeneficios:hover {
+    opacity: 1;
 }
 
 .utensilios {
 	
-	width: 120px;
+	width: 15%;
 	float: left;
 	margin: 0 20px 20px 0;
 }
 
+.video {
+    margin: 2em auto;
+}
+.mapa {
+	padding:3em 0;
+	background: linear-gradient(#FEFEFE, #888888);
+
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
 /*Rodape*/
 footer {
 	text-align: center;
@@ -85,4 +156,19 @@ footer {
 	color: #FFFFFF;
 	font-size: 13px;
 	margin: 20px 0 0;
+}
+@media screen and (max-width: 480px) { 
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+	}
+	
+	h1 {
+		text-align: center;
+	}
+	nav {
+		position:static;
+	}
+	.lista-beneficios, imagem-beneficios {
+		width: 100%
+	}
 }
