--- a/Formação HTML e CSS/HTML5 e CSS3/style.css
+++ b/Formação HTML e CSS/HTML5 e CSS3/style.css
@@ -1,4 +1,3 @@
-
 header {
 	background: #BBBBBB;
 	padding: 20px 0;
@@ -36,55 +35,56 @@ nav a:hover {
 
 /*Corpo*/
 body {
-    font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .banner {
-    width:100%;
+	width: 100%;
 }
 
-.principal{
+.principal {
 	padding: 3em 0;
-    background: #FEFEFE;
-    width: 940px;
-    margin: 0 auto;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
 
 }
 
 .titulo-principal {
-    text-align: center;
-    font-size: em;
-    margin: 0 0 1em;
+	text-align: center;
+	font-size: em;
+	margin: 0 0 1em;
 	clear: left;
 }
+
 .titulo-principal:before {
-    content: "[";
+	content: "[";
 }
 
 .titulo-principal:after {
-    content:"]"
+	content: "]"
 }
 
 .titulo-principal:first-letter {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 p:first-line {
-    font-style: italic;
+	font-style: italic;
 }
 
 .principal p {
 	margin: 0 0 1em;
-	
+
 }
 
 .principal strong {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .principal em {
 	font-style: italic;
-	
+
 }
 
 .beneficios {
@@ -93,22 +93,24 @@ p:first-line {
 }
 
 .itens {
-    line-height: 1.5;
+	line-height: 1.5;
 }
+
 itens:before {
-    content: "★"
+	content: "★"
 }
+
 .itens:first-child {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .conteudo-beneficios {
-    width: 640px;
-    margin: 0 auto;
+	width: 640px;
+	margin: 0 auto;
 }
 
 .lista-beneficios {
-    width: 40%;
+	width: 40%;
 	display: inline-block;
 	vertical-align: top;
 
@@ -122,29 +124,31 @@ itens:before {
 }
 
 .imagembeneficios:hover {
-    opacity: 1;
+	opacity: 1;
 }
 
 .utensilios {
-	
+
 	width: 15%;
 	float: left;
 	margin: 0 20px 20px 0;
 }
 
 .video {
-    margin: 2em auto;
+	margin: 2em auto;
 }
+
 .mapa {
-	padding:3em 0;
+	padding: 3em 0;
 	background: linear-gradient(#FEFEFE, #888888);
 
 }
 
 .mapa p {
-    margin: 0 0 2em;
-    text-align: center;
+	margin: 0 0 2em;
+	text-align: center;
 }
+
 /*Rodape*/
 footer {
 	text-align: center;
@@ -157,18 +161,27 @@ footer {
 	font-size: 13px;
 	margin: 20px 0 0;
 }
-@media screen and (max-width: 480px) { 
-    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
-        width: auto;
+
+@media screen and (max-width: 480px) {
+
+	.caixa,
+	.principal,
+	.conteudo-beneficios,
+	.mapa-conteudo,
+	.video {
+		width: auto;
 	}
-	
+
 	h1 {
 		text-align: center;
 	}
+
 	nav {
-		position:static;
+		position: static;
 	}
-	.lista-beneficios, imagem-beneficios {
+
+	.lista-beneficios,
+	imagem-beneficios {
 		width: 100%
 	}
 }
