--- a/Formação HTML e CSS/Css Grid simplificando layouts/assets/css/style.css
+++ b/Formação HTML e CSS/Css Grid simplificando layouts/assets/css/style.css
@@ -1,14 +1,44 @@
 .app {
     background: #f1f1f1;
-    display: grid;  
+    display: grid;
     font-family: Arial, Helvetica, sans-serif;
+    grid-template-areas:
+        "cabecalho"
+        "destaques"
+        "conteudo"
+        "rodape";
+    grid-template-columns: auto;
+    grid-template-rows: 50px auto auto;
 }
 
 .cabecalho {
+    align-items: center;
+    display: flex;
+    grid-area: cabecalho;
+    padding: 0 2rem;
 }
- 
+
+.menu__link {
+    color: #333333;
+    padding: .5rem 1rem;
+}
+
+.menu__link:hover,
+.menu__link.ativo {
+    border-bottom: 2px solid #0073e6;
+}
+
 .conteudo {
+    grid-area: conteudo;
+    padding: 0 2rem;
 }
 
 .rodape {
+    background: #fdfdfd;
+    color: #333333;
+    font-size: .8rem;
+    grid-area: rodape;
+    padding: 1rem;
+    text-align: center;
+
 }
